--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,2 +1,2 @@
 body { font-size: 140%; }
-.abs-info { position: absolute; right: 25px; top: 80%; width: 300px; height: 10%;}
+.abs-info { position: absolute; right: 25px; top: 80%; width: 300px; height: 10%;z-index: 100;}
